syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service OpcuaControllerService {
    rpc SetDatapoint (OpcuaControllerMessage) returns (OpcuaControllerResult);
}

message OpcuaControllerMessage {
    string identifier = 1;
    float value = 2;
}

message OpcuaControllerResult {
    enum ResultCode {
        Success = 0;
        Error = 1;
    }
    ResultCode resultCode = 1;
    string message = 2;
}